k8s-manifests/5-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
  labels:
    app: worker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      # This is the new block to tell K8s how to pull private images
      imagePullSecrets:
        - name: ghcr-secret # The secret we created with your PAT
      containers:
        - name: worker
          # This is the new image path from your GitHub Container Registry
          image: ghcr.io/inby-420/auto-stack/worker-node:0.4
          imagePullPolicy: Always # Ensures it always pulls the latest image
          ports:
            - containerPort: 8525 # Main app port
            - containerPort: 8001 # Metrics port
