k8s-manifests/7-result-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result-deployment
  labels:
    app: result
spec:
  replicas: 1
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      # This is the new block to tell K8s how to pull private images
      imagePullSecrets:
        - name: ghcr-secret # The secret we created with your PAT
      containers:
        - name: result
          # This is the new image path from your GitHub Container Registry
          image: ghcr.io/inby-420/auto-stack/result-node:latest
          imagePullPolicy: Always # Ensures it always pulls the latest image
          ports:
            - containerPort: 8080
