k8s-manifests/9-sender-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sender-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sender
  template:
    metadata:
      labels:
        app: sender
        release: prometheus # For the ServiceMonitor
    spec:
      # This is the new block to tell K8s how to pull private images
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: sender
          # This will be automatically updated by your CI pipeline
          image: ghcr.io/inby-420/auto-stack/traffic-sender:0.8
          # This forces K8s to check for new versions of the image
          imagePullPolicy: Always
