k8s-manifests/6-worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  # This service gives our worker a stable network name
  name: worker-svc
spec:
  selector:
    app: worker
  ports:
    - protocol: TCP
      port: 8525
      targetPort: 8525
